Try to fix the 200 mb limit

--- a/vercel.json
+++ b/vercel.json
@@ -12,4 +12,11 @@
             "dest": "/"
         }
     ]
+    
+  "functions": {
+    "api/**": {
+      "excludeFiles": "{.next,*.cache,node_modules,public,app}/**"
+    }
+  }
+
 }
